--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,11 @@
 <resources>
-    <string name="app_name">Beer_Adviser_2</string>
+    <string name="app_name">HFA_BeerAdviser</string>
+    <string name="find_beer">Find Beer</string>
+    <string name="brands">No beer selected</string>
+    <string-array name="beer_colors">
+        <item>Light</item>
+        <item>Amber</item>
+        <item>Brown</item>
+        <item>Dark</item>
+    </string-array>
 </resources>
